# TERANiS-PLC

./: .gitignore  CMakeLists.txt  Dockerfile  Plc.cpp  Plc.h  PlcIo.cpp  PlcIo.h  PlcIoMraa.cpp  PlcIoMraa.h  PlcIoRevPi.cpp  PlcIoRevPi.h  PlcMemory.cpp  PlcMemory.h  PlcTask.cpp  PlcTask.h  README.md  TeranisTask.cpp  TeranisTask.h  compile-open62541-posix.sh  compile-open62541-win32.bat  download-open62541.bat  download-open62541.sh  main.cpp  plc.cpp  plc.h  teranis.cpp  teranis.h  teranis_code.h
.github/workflows/: build.yaml
avicstd/h/: avi_c_std.h  avi_math.h
avicstd/h/datatypes/: st_bool.h  st_numeric.h  st_string.h  st_time.h
linux/: TERANiS_PLC.sh
modbus/: MModbusBase.cpp  MModbusBase.h  MModbusTCPServer.cpp  MModbusTCPServer.h  MRegExp.cpp  MRegExp.h  MSocket.cpp  MSocket.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h  platform.h
opcua/: OpcuaServer.cpp  OpcuaServer.h  OpcuaVariable.cpp  OpcuaVariable.h  opcua_configuration.cpp  opcua_configuration.h
